--- a/jquery.html
+++ b/jquery.html
@@ -2,11 +2,23 @@
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript">
+            function sendRequest(sender){
+                var request=new XMLHttpRequest();
+                request.open("POST", "jquery.html", true);
+                request.onreadystatechange = receiveResponse;
+                request.send(sender.val());
+            }
+
+            function receiveResponse(){
+            }
+        </script>
+        <script type="text/javascript">
             $(document).ready(function(){
-              $("button").click(function(){
-                  alert($(this).val());
-                  });
-  });
+                $("button").click(function(){                    
+                    var sender = $(this);
+                    sendRequest(sender);
+                    });
+                });
   </script>
   </head>
   <body>
